Fixed som minor visual stuff
Fixed column width

--- a/Forelesning 8/warrior-types.html
+++ b/Forelesning 8/warrior-types.html
@@ -30,7 +30,7 @@
                 <h2 class = "subtitle">Available Warriors</h2>
                 <div id = "warrior-types" class="columns is-multiline"></div>
             </section>
-            <section class="column">
+            <section class="column is-4">
                 <h2 class = "subtitle">Chosen warrior</h2>
                 <div id = "chosen-warrior" class="columns is-multiline"></div>
             </section>
